--- a/explorer/Cargo.toml
+++ b/explorer/Cargo.toml
@@ -1,9 +1,11 @@
 [dependencies]
-anyhow = "1.0.97"
-process_macros = "0.1"
-rmp-serde = "1.3.0"
+anyhow = "1.0"
+md5 = "0.7"
 serde_json = "1.0"
+serde_urlencoded = "0.7"
+tracing = "0.1.37"
 wit-bindgen = "0.36.0"
+process_macros = "0.1"
 
 [dependencies.caller-utils]
 path = "../target/caller-utils"
@@ -20,15 +22,14 @@ rev = "4c944b2"
 features = ["derive"]
 version = "1.0"
 
-[features]
-simulation-mode = []
-
 [lib]
 crate-type = ["cdylib"]
+name = "explorer"
+path = "src/lib.rs"
 
 [package]
 edition = "2021"
-name = "id"
+name = "explorer"
 version = "0.1.0"
 
 [package.metadata.component]
