--- a/pkg/manifest.json
+++ b/pkg/manifest.json
@@ -1,17 +1,23 @@
 [
   {
-    "process_name": "id",
-    "process_wasm_path": "/id.wasm",
+    "process_name": "explorer",
+    "process_wasm_path": "/explorer.wasm",
     "on_exit": "Restart",
     "request_networking": false,
     "request_capabilities": [
+        "homepage:homepage:sys",
         "http-server:distro:sys",
-        "sign:sign:sys",
-        "vfs:distro:sys"
+        "vfs:distro:sys",
+        {
+            "process": "vfs:distro:sys",
+            "params": {
+                "root": true
+            }
+        }
     ],
     "grant_capabilities": [
+        "homepage:homepage:sys",
         "http-server:distro:sys",
-        "sign:sign:sys",
         "vfs:distro:sys"
     ],
     "public": false
